--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,6 +22,7 @@
             android:text="Your information"
             android:textSize="40dp"
             android:textStyle="italic"
+            android:textColor="@color/black"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
@@ -41,10 +42,12 @@
             android:id="@+id/username"
             android:hint="Enter your full name"
             android:inputType="textPersonName"
+            android:textColorHint="@color/light"
             android:textSize="17sp"
             android:layout_marginStart="50dp"
             android:background="@drawable/border"
             android:padding="10dp"
+            android:textColor="@color/black"
             android:layout_below="@+id/reg_username"
             />
 
@@ -73,10 +76,12 @@
             android:id="@+id/email"
             android:hint="Enter your email"
             android:inputType="textEmailAddress"
+            android:textColorHint="@color/light"
             android:textSize="16sp"
             android:padding="10dp"
             android:layout_marginStart="50dp"
             android:background="@drawable/border"
+            android:textColor="@color/black"
             android:layout_below="@+id/reg_email"
             />
 
@@ -108,6 +113,8 @@
             android:textSize="16sp"
             android:padding="10dp"
             android:layout_marginStart="50dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/light"
             android:background="@drawable/border"
             android:layout_below="@+id/reg_password"
             />
@@ -141,6 +148,8 @@
             android:padding="10dp"
             android:layout_marginStart="50dp"
             android:background="@drawable/border"
+            android:textColor="@color/black"
+            android:textColorHint="@color/light"
             android:layout_below="@+id/reg_confirm_password"
             />
 
