--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -15,7 +15,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:title="MGlasses"
             app:titleTextColor="@color/pulink"
             android:background="@color/white" />
@@ -30,7 +30,7 @@
             android:scaleType="centerCrop"
             android:layout_marginTop="20dp"/>
 
-        <!-- Welcome Text -->
+
         <TextView
             android:id="@+id/welcome"
             android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/light"
+            android:textColor="@color/light"
             android:dateTextAppearance="?android:attr/textAppearanceMedium"
             android:layout_margin="10dp" />
 
